add support for multiple target frameworks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: csharp
 solution: Mocean.sln
-install:
-  - nuget restore Mocean.sln
-  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
+dist: xenial
+mono: latest
+dotnet: 2.1
+ 
 script:
-  - msbuild Mocean.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./MoceanTests/bin/Debug/MoceanTests.dll
+  - dotnet build
+  - dotnet test --no-build /p:CollectCoverage=true /p:CoverLetOutputFormat=opencover
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
