--- a/Mocean/Mocean.nuspec
+++ b/Mocean/Mocean.nuspec
@@ -21,30 +21,37 @@
       <group targetFramework="net452">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="net46">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="net461">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="net462">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="net471">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="netstandard1.6">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
       <group targetFramework="netstandard2.0">
         <dependency id="Newtonsoft.Json" version="[12.0.0,13.0.0)"></dependency>
         <dependency id="System.Net.Http" version="[4.0.0,5.0.0)"></dependency>
+        <dependency id="System.Xml.XmlSerializer" version="[4.0.0,5.0.0)"></dependency>
       </group>
     </dependencies>
   </metadata>
