add voice feature

--- a/MoceanTests/MoceanTests.csproj
+++ b/MoceanTests/MoceanTests.csproj
@@ -126,6 +126,12 @@
     <None Update="Resources\verify_code.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\voice.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\voice.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
